cloudformation/us-west-2.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: "Mozilla Federated Access Proxy"
Mappings:
  dev:
      us-west-2:
        AMI: ami-983daaf8
        CertificateARN: "arn:aws:acm:us-west-2:656532927350:certificate/93b81548-c28d-4912-b621-fc6cc6b52274"
  prod:
      us-west-2:
        AMI: ami-983daaf8
        CertificateARN: ""
Parameters:
  SSHKeyName:
    Description: Name of the existing ssh key that should have access
    Type: String
    MinLength: "1"
    Default: akrug-key
  EnvType:
    Description: Environment type.
    Default: dev
    Type: String
    AllowedValues:
      - prod
      - dev
Conditions:
  UseProdCondition:
    !Equals [!Ref EnvType, prod]
  UseDevCondition:
    !Equals [!Ref EnvType, dev]
Resources:
  AccessProxyInternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: Name
          Value: AccessProxy
  AccessProxyVPC:
    Type: "AWS::EC2::VPC"
    DependsOn: AccessProxyInternetGateway
    Properties:
      CidrBlock: "10.0.0.0/16"
      EnableDnsSupport: True
      EnableDnsHostnames: True
      Tags:
        - Key: Name
          Value: AccessProxy
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    DependsOn: AccessProxyVPC
    Properties:
      VpcId:
        Ref: AccessProxyVPC
      InternetGatewayId:
        Ref: AccessProxyInternetGateway
  AccessProxyRouteTable:
    Type: "AWS::EC2::RouteTable"
    DependsOn: [ AccessProxyVPC, AccessProxyInternetGateway, AttachGateway ]
    Properties:
      VpcId:
        Ref: AccessProxyVPC
      Tags:
        - Key: Name
          Value: AccessProxy
  AccessProxyDefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: AccessProxyInternetGateway
    Properties:
      RouteTableId:
        Ref: AccessProxyRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: AccessProxyInternetGateway
  AccessProxySubnet1:
    Type: "AWS::EC2::Subnet"
    DependsOn: AccessProxyRouteTable
    Properties:
      AvailabilityZone: "us-west-2a"
      CidrBlock: "10.0.0.0/24"
      MapPublicIpOnLaunch: True
      VpcId:
        Ref: AccessProxyVPC
      Tags:
        - Key: Name
          Value: AccessProxy Subnet 1
  AccessProxySubnet2:
    Type: "AWS::EC2::Subnet"
    DependsOn: AccessProxyRouteTable
    Properties:
      AvailabilityZone: "us-west-2b"
      CidrBlock: "10.0.1.0/24"
      MapPublicIpOnLaunch: True
      VpcId:
        Ref: AccessProxyVPC
      Tags:
        - Key: Name
          Value: AccessProxy Subnet 2
  AccessProxySubnet3:
    Type: "AWS::EC2::Subnet"
    DependsOn: AccessProxyRouteTable
    Properties:
      AvailabilityZone: "us-west-2c"
      CidrBlock: "10.0.2.0/24"
      MapPublicIpOnLaunch: True
      VpcId:
        Ref: AccessProxyVPC
      Tags:
        - Key: Name
          Value: AccessProxy Subnet 3
  AccessProxyRouteAssoc1:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DependsOn: AccessProxyDefaultRoute
    Properties:
      RouteTableId:
        Ref: AccessProxyRouteTable
      SubnetId:
        Ref: AccessProxySubnet1
  AccessProxyRouteAssoc2:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DependsOn: AccessProxyDefaultRoute
    Properties:
      RouteTableId:
        Ref: AccessProxyRouteTable
      SubnetId:
        Ref: AccessProxySubnet2
  AccessProxyRouteAssoc3:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DependsOn: AccessProxyDefaultRoute
    Properties:
      RouteTableId:
        Ref: AccessProxyRouteTable
      SubnetId:
        Ref: AccessProxySubnet3
  AccessProxySecGroup:
    Type: "AWS::EC2::SecurityGroup"
    DependsOn: AccessProxyVPC
    Properties:
      GroupDescription: "Allows ports to web instances of AccessProxy from ELB."
      VpcId:
        Ref: AccessProxyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 10.0.0.0/8
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: AccessProxy
  AccessProxyELBSecGroup:
    Type: "AWS::EC2::SecurityGroup"
    DependsOn: AccessProxyVPC
    Properties:
      GroupDescription: "Allows access to the ELB listeners."
      VpcId:
        Ref: AccessProxyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: AccessProxy ELB
  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    DependsOn: AccessProxyELBSecGroup
    Properties:
      Scheme: internet-facing
      Subnets:
        - Ref: AccessProxySubnet1
        - Ref: AccessProxySubnet2
        - Ref: AccessProxySubnet3
      SecurityGroups:
        - Ref: AccessProxyELBSecGroup
      Tags:
        - Key: Name
          Value: AccessProxy
  ALBHTTPListener:
    Type : AWS::ElasticLoadBalancingV2::Listener
    DependsOn: ApplicationLoadBalancer
    Properties:
      DefaultActions:
      - Type: forward
        TargetGroupArn:
          Ref: ALBTargetGroup
      LoadBalancerArn:
        Ref: ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP
  ALBHTTPSListener:
    Type : AWS::ElasticLoadBalancingV2::Listener
    DependsOn: ApplicationLoadBalancer
    Properties:
      Certificates:
        - CertificateArn: !FindInMap [!Ref EnvType, !Ref "AWS::Region", CertificateARN]
      DefaultActions:
      - Type: forward
        TargetGroupArn:
          Ref: ALBTargetGroup
      LoadBalancerArn:
        Ref: ApplicationLoadBalancer
      Port: 443
      Protocol: HTTPS
      SslPolicy: ELBSecurityPolicy-2016-08
  ALBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn: ApplicationLoadBalancer
    Properties:
      HealthyThresholdCount: 2
      HealthCheckIntervalSeconds: 10
      UnhealthyThresholdCount: 2
      HealthCheckPath: /health
      HealthCheckPort: 80
      Name: AccessProxyHTTPs
      Port: 80
      Protocol: HTTP
      VpcId:
        Ref: AccessProxyVPC
      Tags:
        - Key: Name
          Value: AccessProxy
  ALBTargetGroup1:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn: ApplicationLoadBalancer
    Properties:
      HealthyThresholdCount: 2
      HealthCheckIntervalSeconds: 10
      UnhealthyThresholdCount: 2
      HealthCheckPath: /health
      HealthCheckPort: 80
      Name: AccessProxyHTTP
      Port: 80
      Protocol: HTTP
      VpcId:
        Ref: AccessProxyVPC
      Tags:
        - Key: Name
          Value: AccessProxy
  AccessProxyLaunchConfigProd:
    Type: "AWS::AutoScaling::LaunchConfiguration"
    Condition: UseProdCondition
    Properties:
      KeyName: !Ref SSHKeyName
      ImageId: !FindInMap [!Ref EnvType, !Ref "AWS::Region", AMI]
      IamInstanceProfile: "AccessProxy-instance-profile"
      UserData:
        Fn::Base64: !Sub |
          #cloud-config
          repo_update: true
          repo_upgrade: all
          runcmd:
            - REGION=$(curl 169.254.169.254/latest/meta-data/placement/availability-zone/ | sed 's/[a-z]$//')
            - yum update -y
            - yum install ruby wget make -y
            - cd /home/ec2-user
            - pip install boto3 --upgrade
            - wget https://aws-codedeploy-$REGION.s3.amazonaws.com/latest/install
            - chmod +x ./install
            - ./install auto
            - aws ecr get-login --region us-west-2 | bash
            - docker run -d -e SQS_QUEUE=AccessProxy-fluentd-sqs -v /var/log:/var/log 656532927350.dkr.ecr.us-west-2.amazonaws.com/sqs-fluentd:latest td-agent -c /etc/td-agent/td-agent.conf
            - mkdir /home/ec2-user/app
            - cd /home/ec2-user/app
            - git clone https://github.com/mozilla-iam/federated_access_proxy
            - git checkout production
            - cd /home/ec2-user/app/federated_access_proxy/Docker
            - make compose-production
      SecurityGroups:
        - Ref: AccessProxySecGroup
      InstanceType: "t2.medium"
  AccessProxyLaunchConfigDev:
    Type: "AWS::AutoScaling::LaunchConfiguration"
    Condition: UseDevCondition
    DependsOn: [ AccessProxySubnet1, AccessProxySubnet2, AccessProxySubnet3 ]
    Properties:
      KeyName: !Ref SSHKeyName
      ImageId: !FindInMap [!Ref EnvType, !Ref "AWS::Region", AMI]
      IamInstanceProfile: "AccessProxy-instance-profile"
      UserData:
        Fn::Base64: !Sub |
          #cloud-config
          repo_update: true
          repo_upgrade: all
          runcmd:
            - REGION=$(curl 169.254.169.254/latest/meta-data/placement/availability-zone/ | sed 's/[a-z]$//')
            - yum update -y
            - yum install ruby wget make -y
            - cd /home/ec2-user
            - pip install boto3 --upgrade
            - wget https://aws-codedeploy-$REGION.s3.amazonaws.com/latest/install
            - chmod +x ./install
            - ./install auto
            - aws ecr get-login --region us-west-2 | bash
            - docker run -d -e SQS_QUEUE=AccessProxy-fluentd-sqs -v /var/log:/var/log 656532927350.dkr.ecr.us-west-2.amazonaws.com/sqs-fluentd:latest td-agent -c /etc/td-agent/td-agent.conf
            - mkdir /home/ec2-user/app
            - cd /home/ec2-user/app
            - git clone https://github.com/mozilla-iam/federated_access_proxy
            - cd /home/ec2-user/app/federated_access_proxy/Docker
            - make compose-staging
      SecurityGroups:
        - Ref: AccessProxySecGroup
      InstanceType: "t2.medium"
  HTTPsListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Actions:
      - Type: forward
        TargetGroupArn:
          Ref: ALBTargetGroup1
      Conditions:
      - Field: path-pattern
        Values:
        - "*"
      ListenerArn:
        Ref: ALBHTTPSListener
      Priority: 1
  HTTPListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Actions:
      - Type: forward
        TargetGroupArn:
          Ref: ALBTargetGroup1
      Conditions:
      - Field: path-pattern
        Values:
        - "*"
      ListenerArn:
        Ref: ALBHTTPListener
      Priority: 1
  AccessProxyASG:
    Type: "AWS::AutoScaling::AutoScalingGroup"
    DependsOn: [ AccessProxySubnet1, AccessProxySubnet2, AccessProxySubnet3 ]
    Properties:
      Tags:
        -
          Key: Application
          Value: AccessProxy
          PropagateAtLaunch: true
        -
          Key: Name
          Value: AccessProxy-Worker
          PropagateAtLaunch: true
      TargetGroupARNs:
         - Ref: ALBTargetGroup
         - Ref: ALBTargetGroup1
      MaxSize: "5"
      MinSize: "3"
      VPCZoneIdentifier:
        - Ref: AccessProxySubnet1
        - Ref: AccessProxySubnet2
        - Ref: AccessProxySubnet3
      LaunchConfigurationName:
        !If [UseProdCondition, Ref: AccessProxyLaunchConfigProd, Ref: AccessProxyLaunchConfigDev]
